# MVSTexturing-LIbs

./: README.md
mapmap_cpu/: CMakeLists.txt
mve/: CMakeLists.txt
mve/math/: accum.h  algo.h  bezier_curve.h  bspline.h  functions.h  geometry.h  line.h  matrix.h  matrix_qr.h  matrix_svd.h  matrix_tools.h  octree_tools.h  permute.h  plane.h  quaternion.h  transform.h  vector.h
mve/mve/: bundle.cc  bundle.h  bundle_io.cc  bundle_io.h  camera.cc  camera.h  depthmap.cc  depthmap.h  image.h  image_base.h  image_color.h  image_drawing.h  image_exif.cc  image_exif.h  image_io.cc  image_io.h  image_tools.cc  image_tools.h  marching.cc  marching_cubes.h  marching_tets.h  mesh.cc  mesh.h  mesh_info.cc  mesh_info.h  mesh_io.cc  mesh_io.h  mesh_io_npts.cc  mesh_io_npts.h  mesh_io_obj.cc  mesh_io_obj.h  mesh_io_off.cc  mesh_io_off.h  mesh_io_pbrt.cc  mesh_io_pbrt.h  mesh_io_ply.cc  mesh_io_ply.h  mesh_io_smf.cc  mesh_io_smf.h  mesh_tools.cc  (+7 more)
mve/png_headers/: png.h
mve/util/: aligned_allocator.h  aligned_memory.h  arguments.cc  arguments.h  exception.h  file_system.cc  file_system.h  frame_timer.h  ini_parser.cc  ini_parser.h  logging.h  strings.h  system.h  timer.h  tokenizer.h
mvs-texturing/: CMakeLists.txt
mvs-texturing/apps/texrecon/: CMakeLists.txt  arguments.cpp  arguments.h  texrecon.cpp
mvs-texturing/libs/tex/: CMakeLists.txt  calculate_data_costs.cpp  generate_debug_embeddings.cpp  generate_texture_atlases.cpp  generate_texture_patches.cpp  generate_texture_views.cpp  global_seam_leveling.cpp  histogram.cpp  local_seam_leveling.cpp  material_lib.cpp  material_lib.h  obj_model.cpp  poisson_blending.cpp  poisson_blending.h  progress_counter.h  seam_leveling.h  sparse_table.h  texture_atlas.cpp  texture_atlas.h  texture_patch.cpp  texture_patch.h  texture_view.cpp  texture_view.h  texturing.h  timer.h  tri.h  util.h  view_selection.cpp
oneTBB/: .gitignore  CMakeLists.txt
